--- a/_posts/0000-01-02-FrankXu1.md
+++ b/_posts/0000-01-02-FrankXu1.md
@@ -2,7 +2,7 @@
 layout: slide
 title: "Welcome to our second slide!"
 ---
-Your text
+Your text12346
 Use the left arrow to go back!
 
 #### the files which end by .md can identify the Markdown text
